created express vite template

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "Cortex",
+  "name": "cortex",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server/main.js -w src/server",
     "start": "cross-env NODE_ENV=production node src/server/main.js",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
