--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
     "vite": "^6.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.856.0",
+    "@codemirror/lang-markdown": "^6.3.3",
+    "axios": "^1.11.0",
+    "codemirror": "^6.0.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "vite-express": "*",
-    "cross-env": "^7.0.3"
+    "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
+    "path": "^0.12.7",
+    "vite-express": "*"
   }
 }
