--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@codemirror/lang-markdown": "^6.3.3",
     "axios": "^1.11.0",
     "codemirror": "^6.0.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
