--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-katex": "^2.0.3",
     "path": "^0.12.7",
+    "url": "^0.11.4",
     "vite-express": "*"
   }
 }
