--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@aws-sdk/client-s3": "^3.856.0",
     "@codemirror/lang-markdown": "^6.3.3",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "codemirror": "^6.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "markdown-it": "^14.1.0",
     "markdown-it-katex": "^2.0.3",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.0",
     "path": "^0.12.7",
     "url": "^0.11.4",
     "vite-express": "*"
