--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "codemirror": "^6.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^17.2.1",
