--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "path": "^0.12.7",
+    "standard": "^17.1.2",
     "url": "^0.11.4",
     "vite-express": "*"
   }
